--- a/templates/Telegram/package.json
+++ b/templates/Telegram/package.json
@@ -3,20 +3,17 @@
   "displayName": "Telegram Bot",
   "version": "1.0.0",
   "description": "BotGen Telegram",
-  "author": "BotGen CLI <botgen@outlook.com.br>",
+  "author": "BotGen <https://github.com/xxgicoxx/botgen>",
   "license": "MIT",
   "main": "app.js",
   "scripts": {
     "start": "node app.js"
   },
   "repository": {
-    "type": "git",
-    "url": "https://github.com/"
+    "type": "git"
   },
-  "bugs": {
-    "url": "https://github.com/"
-  },
-  "homepage": "https://github.com/xxgicoxx/botgen",
+  "bugs": {},
+  "homepage": "",
   "keywords": [
     "telegram",
     "bot"
