--- a/templates/Telegram/.env
+++ b/templates/Telegram/.env
@@ -1,9 +1,3 @@
-# Telegram bot token
+# Telegram
+TELEGRAM_USERNAME=
 TELEGRAM_TOKEN=
-
-# Workers
-WORKERS=1
-
-# Web Admin
-WEB_ADMIN_PORT=7777
-WEB_ADMIN_HOST=localhost
