--- a/templates/Twitter/package.json
+++ b/templates/Twitter/package.json
@@ -1,13 +1,13 @@
 {
   "name": "twitter-bot",
   "displayName": "Twitter Bot",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "BotGen Twitter",
   "author": "BotGen <https://github.com/xxgicoxx/botgen>",
   "license": "MIT",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git"
@@ -19,12 +19,12 @@
     "bot"
   ],
   "dependencies": {
-    "dotenv": "^8.2.0",
+    "dotenv": "^10.0.0",
     "twit": "^2.2.11"
   },
   "devDependencies": {
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-plugin-import": "^2.20.1"
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.24.0"
   }
 }
